[SELC-6086] clean tests and remove unused swagger reference